# XLens

./: README.md  hello.py  pyproject.toml
.github/workflows/: checks.yml
examples/: generate.py
src/xlens/: __init__.py  config.py  hooked_transformer.py  utils.py
src/xlens/components/: __init__.py  attention.py  embed.py  layer_norm.py  mlp.py  transformer_block.py  unembed.py
src/xlens/hooks/: __init__.py  hook_point.py  utilities.py
src/xlens/pretrained/: convert.py  loading_from_pretrained.py  model_converter.py
src/xlens/pretrained/convert_weight/: __init__.py  gpt2.py  mistral.py
src/xlens/pretrained/converters/: __init__.py  chameleon.py  gpt2.py  llama.py  mistral.py  neox.py  qwen2.py
src/xlens/utilities/: activation_functions.py  functional.py  traverse.py
src/xlens/variables/: kv_cache.py  past_context_cache.py
tests/acceptance/computation/: test_gpt2_activation_cache.py  test_gpt2_computation.py  test_gpt2_computation_speed.py  test_llama_computation.py  test_mistral_computation.py  test_pythia_computation.py  test_qwen2_computation.py
tests/integration/: test_attention_mask.py  test_convert_weight.py  test_generate.py  test_kv_cache.py  test_load_pretrained.py
tests/unit/: test_hook_point.py  test_utils.py  test_with_hooks.py
