[project]
name = "xlens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.11.8",
    "jax[cuda12]>=0.4.35",
    "optax>=0.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.1",
]
test = [
    "pytest>=8.3.3",
]

[tool.uv.workspace]
members = ["xlens"]

